# idhs

./: CHANGELOG.md  Justfile  idell.cabal
app/: Ast.hs  Main.hi  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
