cabal-version:      2.4
name:               idell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Chris Pecunies
maintainer:         clp@clp.is

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    ghc-options: -Wall -fno-warn-name-shadowing -Wcompat -Wincomplete-uni-patterns
    exposed-modules:
        Ast
        Data
    build-depends:
        array
        , containers
        -- , base >=4.7 && <5
        -- , bytestring
        -- , containers
        -- , directory
        -- , filepath
        -- , llvm-hs >=9 && <10
        -- , llvm-hs-pretty >=0.9 && <1
        -- , llvm-hs-pure >=9 && <10
        -- , megaparsec
        -- , mtl
        -- , parser-combinators
        -- , prettyprinter
        -- , process
        -- , string-conversions
        -- , text
        -- , unix
executable idell
    main-is:          Main.hs
    ghc-options: -Wall -fno-warn-name-shadowing -Wcompat -Wincomplete-uni-patterns


    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        array
        , containers
    -- build-depends:
          -- array
        -- , base >=4.7 && <5
        -- , bytestring
        -- , containers
        -- , directory
        -- , filepath
        -- , llvm-hs >=9 && <10
        -- , llvm-hs-pretty >=0.9 && <1
        -- , llvm-hs-pure >=9 && <10
        -- , megaparsec
        -- , mtl
        -- , parser-combinators
        -- , prettyprinter
        -- , process
        -- , string-conversions
        -- , text
        -- , unix
